Add .gitignore to keep repo clean

--- a/website-next/tsconfig.json
+++ b/website-next/tsconfig.json
@@ -1,29 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ES2017",
+    "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
+    "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": ".",                     // ✅ Add this line
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
-      "src/*": ["src/*"]                // ✅ Add this line
-    },
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
+      "src/*": ["src/*"]
+    }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/page.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
