--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.525.0",
     "next": "^15.3.4",
     "nodemailer": "^7.0.3",
     "react": "^19.1.0",
