--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lucide-react": "^0.525.0",
     "next": "^15.3.4",
     "nodemailer": "^7.0.3",
+    "package-name": "^0.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-google-recaptcha": "^3.1.0",
@@ -26,7 +27,7 @@
     "eslint": "^9.30.0",
     "eslint-config-next": "^15.3.3",
     "gh-pages": "^6.3.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   }
 }
