--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "^5.11.4",
+    "framer-motion": "^12.23.0",
     "lucide-react": "^0.525.0",
     "next": "^15.3.4",
     "nodemailer": "^7.0.3",
